Styled image boxes and nav links

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="https://kit.fontawesome.com/e6aadad199.js" crossorigin="anonymous"></script>
-        
-        <link rel="stylesheet" href="style.css">
-        
+        <script
+            src="https://kit.fontawesome.com/e6aadad199.js"
+            crossorigin="anonymous"
+        ></script>
+
+        <link rel="stylesheet" href="style.css" />
+
         <title>Eggz.com</title>
     </head>
     <body>
@@ -21,26 +24,44 @@
                     <a href="#" class="nav-link">Info</a>
                     <a href="#" class="nav-link">Contact</a>
                 </div>
+                <a href="#" class="toggle" id="navHamburger">
+                    <i class="fas fa-bars"></i>
+                </a>
             </div>
             <div class="content-wrapper">
                 <div class="welcome-wrapper">
                     <h1>
-                        Welcome
+                        Howdy, this is <span style="font-family: 'Fahkwang', sans-serif;">Eggz</span>.
                     </h1>
                 </div>
                 <div class="hero-wrapper">
                     <div class="slide-show-wrapper">
-                        <img src="images/chikinpicture.jpg" alt="">
+                        <img src="images/chikinpicture.jpg" alt="" />
                     </div>
                     <div class="image-box-wrapper">
-                        <a class="egg" href="#"><div class="image-box"><i class="fas fa-egg"></i></div></a>
-                        <a class="book" href="#"><div class="image-box"><i class="fas fa-book"></i></div></a>
-                        <a class="plane" href="#"><div class="image-box"><i class="fas fa-paper-plane"></i></div></a>
+                        <div class="image-box egg-box">
+                            <a class="egg" href="#"
+                                ><i class="fas fa-egg"></i>
+                                <p>Products</p>
+                            </a>
+                        </div>
+                        <div class="image-box book-box">
+                            <a class="book" href="#"
+                                ><i class="fas fa-book"></i>
+                                <p>Info</p>
+                            </a>
+                        </div>
+                        <div class="image-box plane-box">
+                            <a class="plane" href="#"
+                                ><i class="fas fa-paper-plane"></i>
+                                <p>Contact</p>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
             <footer>
-                Copyright Derek and Brian 2020
+                &copy; 2020 Derek and Brian
             </footer>
         </div>
     </body>
