Beginning product page and refining styling.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     <h1>Eggz</h1>
                 </div>
                 <div class="links-wrapper">
-                    <a href="#" class="nav-link">Home</a>
-                    <a href="#" class="nav-link">Products</a>
+                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="products.html" class="nav-link">Products</a>
                     <a href="#" class="nav-link">Info</a>
                     <a href="#" class="nav-link">Contact</a>
                 </div>
